--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         />
         <link rel="stylesheet" href="styles/styles.css" />
 
-        <title>LOZ Wiki</title>
+        <link
+            rel="icon"
+            href="./assets/imgApp/favicon.ico"
+            type="image/x-icon"
+        />
+        <title>LoZ Top Ranking</title>
     </head>
     <body>
         <header>
@@ -49,129 +54,131 @@
             </nav>
         </header>
         <main>
-            <h1>Bienvenidos al ranking de juegos de Legend of Zelda</h1>
+            <div class="home-main">
+                <h1>Bienvenidos al ranking de juegos de Legend of Zelda</h1>
 
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="0"
+                            class="active"
+                            aria-current="true"
+                            aria-label="Slide 1"
+                        ></button>
+                        <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="1"
+                            aria-label="Slide 2"
+                        ></button>
+                        <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="2"
+                            aria-label="Slide 3"
+                        ></button>
+                        <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="3"
+                            aria-label="Slide 4"
+                        ></button>
+                        <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="4"
+                            aria-label="Slide 5"
+                        ></button>
+                        <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="5"
+                            aria-label="Slide 6"
+                        ></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img
+                                src="./assets/img/carousel/banner (1).png"
+                                class="d-block w-100"
+                                alt="..."
+                            />
+                        </div>
+                        <div class="carousel-item">
+                            <img
+                                src="./assets/img/carousel/banner (2).png"
+                                class="d-block w-100"
+                                alt="..."
+                            />
+                        </div>
+                        <div class="carousel-item">
+                            <img
+                                src="./assets/img/carousel/banner (3).png"
+                                class="d-block w-100"
+                                alt="..."
+                            />
+                        </div>
+                        <div class="carousel-item">
+                            <img
+                                src="./assets/img/carousel/banner (4).png"
+                                class="d-block w-100"
+                                alt="..."
+                            />
+                        </div>
+                        <div class="carousel-item">
+                            <img
+                                src="./assets/img/carousel/banner (5).png"
+                                class="d-block w-100"
+                                alt="..."
+                            />
+                        </div>
+                        <div class="carousel-item">
+                            <img
+                                src="./assets/img/carousel/banner (6).png"
+                                class="d-block w-100"
+                                alt="..."
+                            />
+                        </div>
+                    </div>
                     <button
+                        class="carousel-control-prev"
                         type="button"
                         data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="0"
-                        class="active"
-                        aria-current="true"
-                        aria-label="Slide 1"
-                    ></button>
+                        data-bs-slide="prev"
+                    >
+                        <span
+                            class="carousel-control-prev-icon"
+                            aria-hidden="true"
+                        ></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
                     <button
+                        class="carousel-control-next"
                         type="button"
                         data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="1"
-                        aria-label="Slide 2"
-                    ></button>
-                    <button
-                        type="button"
-                        data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="2"
-                        aria-label="Slide 3"
-                    ></button>
-                    <button
-                        type="button"
-                        data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="3"
-                        aria-label="Slide 4"
-                    ></button>
-                    <button
-                        type="button"
-                        data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="4"
-                        aria-label="Slide 5"
-                    ></button>
-                    <button
-                        type="button"
-                        data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="5"
-                        aria-label="Slide 6"
-                    ></button>
+                        data-bs-slide="next"
+                    >
+                        <span
+                            class="carousel-control-next-icon"
+                            aria-hidden="true"
+                        ></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img
-                            src="./assets/img/carousel/banner (1).png"
-                            class="d-block w-100"
-                            alt="..."
-                        />
-                    </div>
-                    <div class="carousel-item">
-                        <img
-                            src="./assets/img/carousel/banner (2).png"
-                            class="d-block w-100"
-                            alt="..."
-                        />
-                    </div>
-                    <div class="carousel-item">
-                        <img
-                            src="./assets/img/carousel/banner (3).png"
-                            class="d-block w-100"
-                            alt="..."
-                        />
-                    </div>
-                    <div class="carousel-item">
-                        <img
-                            src="./assets/img/carousel/banner (4).png"
-                            class="d-block w-100"
-                            alt="..."
-                        />
-                    </div>
-                    <div class="carousel-item">
-                        <img
-                            src="./assets/img/carousel/banner (5).png"
-                            class="d-block w-100"
-                            alt="..."
-                        />
-                    </div>
-                    <div class="carousel-item">
-                        <img
-                            src="./assets/img/carousel/banner (6).png"
-                            class="d-block w-100"
-                            alt="..."
-                        />
-                    </div>
+                <h2>Top 10 Juegos:</h2>
+                <section id="cards-container">
+                    <!-- Cards se generan desde JS -->
+                </section>
+                <div class="to-top">
+                    <img
+                        src="./assets/imgApp/toTop.png"
+                        alt="To Top Icon"
+                        class="to-top-icon"
+                        onclick="scrollToTop()"
+                    />
                 </div>
-                <button
-                    class="carousel-control-prev"
-                    type="button"
-                    data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev"
-                >
-                    <span
-                        class="carousel-control-prev-icon"
-                        aria-hidden="true"
-                    ></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button
-                    class="carousel-control-next"
-                    type="button"
-                    data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next"
-                >
-                    <span
-                        class="carousel-control-next-icon"
-                        aria-hidden="true"
-                    ></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-            <h2>Top 10 Juegos:</h2>
-            <section id="cards-container" >
-                <!-- Cards se generan desde JS -->
-            </section>
-            <div class="to-top">
-                <img
-                    src="./assets/imgApp/toTop.png"
-                    alt="To Top Icon"
-                    class="to-top-icon"
-                    onclick="scrollToTop()"
-                />
             </div>
         </main>
         <footer>
@@ -179,7 +186,13 @@
             <ul>
                 <li><p>De Robles Agustin</p></li>
                 <li><p>Legajo: 421331</p></li>
-                <li><p><a href="mailto:421331@tecnicatura.frc.utn.edu.ar">421331@tecnicatura.frc.utn.edu.ar</a></p></li>
+                <li>
+                    <p>
+                        <a href="mailto:421331@tecnicatura.frc.utn.edu.ar"
+                            >421331@tecnicatura.frc.utn.edu.ar</a
+                        >
+                    </p>
+                </li>
             </ul>
         </footer>
 
@@ -191,5 +204,3 @@
         ></script>
     </body>
 </html>
-
-<!-- https://freepngimg.com/games/the-legend-of-zelda -->
